# datem

./: Cargo.toml  pyproject.toml  requirements-dev.txt
python/datem/: __init__.py  translate.py
python/datem/expr/: __init__.py
python/datem/optimizer/: __init__.py
python/datem/sql/: parser.py
python/tests/: test_all.py  test_optimize.py  test_parse.py
src/: common.rs  lib.rs  optimizer.rs
