[package]
name = "datem"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "datem"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "=0.23.5", features = ["extension-module", "abi3", "abi3-py38"] }
datafusion =  { version = "=46.0.1", features = ["pyarrow", "avro"]}
datafusion-common = { version = "=46.0.1", features = ["pyarrow"] }
datafusion-expr = "=46.0.1"
datafusion-optimizer = "=46.0.1"
datafusion-sql = "=46.0.1"
prost = "=0.13.5"
datafusion-functions-aggregate = { version = "=46.0.1" }